[package]
name = "wasm-sandbox"
version = "0.1.0"
authors = ["Boshen <boshenc@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[profile.release]
opt-level = "s"
lto = true
debug = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
js-sys = "0.3.49"
wasm-bindgen = "0.2.72"
wee_alloc = { version = "0.4.5", optional = true }
gl_matrix = "0.0.2"

[dependencies.web-sys]
version = "0.3.49"
features = [
  'console',

  'Document',
  'Element',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'Window',
  'Performance',

  'MouseEvent',

  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation'
]
